[package]
name = "hzgrow-r502"
version = "0.1.0"
authors = ["Filip Wieland <filiplamparski@gmail.com>"]
edition = "2018"
description = "A USART driver for the HZ Grow R502 fingerprint reader module. May also be useful for other, similar modules."
keywords = ["embedded-hal-driver", "usart", "serial", "fingerprint", "biometrics"]
categories = ["embedded"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "0.1.2"
embedded-hal = "0.2.3"
byteorder = "1.3.2"
[dependencies.arrayvec]
version = "0.5.1"
default-features = false

