[package]
name = "hzgrow-r502"
version = "0.2.0"
authors = ["Filip Wieland <filiplamparski@gmail.com>"]
homepage = "https://github.com/FLamparski/hzgrow-r502"
repository = "https://github.com/FLamparski/hzgrow-r502"
edition = "2018"
description = "A USART driver for the HZ Grow R502 fingerprint reader module. May also be useful for other, similar modules."
keywords = ["embedded-hal-driver", "usart", "serial", "fingerprint", "biometrics"]
categories = ["embedded"]
readme = "README.md"
license = "MIT"
exclude = [
    "_packet capture/*",
    ".github/*"
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
nb = "0.1.2"
embedded-hal = "0.2.3"
byteorder = "1.3.2"
[dependencies.arrayvec]
version = "0.5.1"
default-features = false

[dev-dependencies]
serialport = "3.2.0"
